Added seed data

--- a/AsyncInn/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
         <h1>Home</h1>
         <nav>
             <ul>
-                <a href="/Home/Hotels">Hotels</a>
-                <a href="/Home/Rooms">Rooms</a>
-                <a href="/Home/Amenities">Amenities</a>
+                <li><a href="/Home/Hotels">Hotels</a></li>
+                <li><a href="/Home/Rooms">Rooms</a></li>
+                <li><a href="/Home/Amenities">Amenities</a></li>
             </ul>
         </nav>
     </main>
