added async controllers

--- a/AsyncInn/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/AsyncInn/Views/Home/Index.cshtml
@@ -11,6 +11,8 @@
                 <li><a href="/Home/Hotels">Hotels</a></li>
                 <li><a href="/Home/Rooms">Rooms</a></li>
                 <li><a href="/Home/Amenities">Amenities</a></li>
+                <li><a href="/Home/AssignAmenities">Assign Amenities to Rooms</a></li>
+                <li><a href="/Home/AssignRooms">Assign Rooms to a Location</a></li>
             </ul>
         </nav>
     </main>
